2002-11-07  Katsumi@yamaoka.cc

	* [w3m-dev 03385] install-sh typo
	* install-sh: s/'/"/

2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03383] Select the nearest map area as default.
	* fm.h (MapArea): add center_x, center_y
	* map.c (nearestMapArea): added
		(follow_map_menu): initial by nearestMapArea()
		(newMapArea): set center_x, center_y

2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03382] Interrupt in no_proxy_check()
	* url.c (check_no_proxy): SIGINT trap by KeyAbort

2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03380] fix configure
	* configure: s/INSTALL_W3MIMGDISPLAY/install_w3mimgdisplay/
			already define
	* config.h.dist (INSTALL_W3MIMGDISPLAY): added

2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03379] setuid w3mimgdisplay and check console tty
	* XMakefile: w3mimgdisplay install by INSTALL_W3MIMGDISPLAY
	* configure: ask setuid w3mimgdisplay
		(w3mimgdisplay_setuid): added
		(INSTALL_W3MIMGDISPLAY): added
	* etc.c (mySystem): close until FOPEN_MAX
	* image.c (openImgdisplay): setenv W3M_TTY
			stderr to /dev/null
			close until FOPEN_MAX
	* install-sh: -o, -g for owner, group
	* proto.h (ttyname_tty): added
	* search.c (open_migemo): stderr to /dev/null
			close until FOPEN_MAX
	* terms.c (ttyname_tty): added
	* w3mimgdisplay.c: include <sys/types.h>, <unistd.h>
			W3MIMGDISPLAY_SETUID
			stderr to /dev/null
	* w3mimg/w3mimg.c: include <sys/types.h>, <unistd.h>
			W3MIMGDISPLAY_SETUID
	* w3mimg/fb/fb_w3mimg.c (check_tty_console): added
	
2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03377] sync_with_option
	* etc.c (loadPassword): reset passwords
	* form.c (loadPreForm): reset PreForm
	* main.c (option_assigned): deleted
		(parse_proxy): deleted
		(MAIN): move initCookie(), setLocalCookie() 
			  after sync_with_option()
			delete parseURL for *_proxy
			s/WrapSearch/WrapDefault/
			move initKeymap(), initMenu() after setupscreen()