@@ -1,3 +1,12 @@
+2002-11-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03386] Re: Interrupt in no_proxy_check()
+	* file.c (getAuthCookie): term_cbreak()
+		(loadGeneralFile): term_cbreak()
+				term_raw()
+				preFormUpdateBuffer() before term_raw()
+		(loadHTMLstream): term_raw()
+
 2002-11-07  Katsumi@yamaoka.cc
 
 	* [w3m-dev 03385] install-sh typo
@@ -4378,4 +4387,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.484 2002/11/06 15:09:16 ukai Exp $
+$Id: ChangeLog,v 1.485 2002/11/08 15:46:05 ukai Exp $
